JDBC-4610 OJVM code inputs (changed code-block signature / code wrapper methods)